fix: better visibility of active section

--- a/src/commonmark/en/resources/css/mkdocs_dhis2.css
+++ b/src/commonmark/en/resources/css/mkdocs_dhis2.css
@@ -282,6 +282,9 @@ article {
 
 .md-nav__link.md-nav__link--active {
   color: var(--blue700);
+  background: var(--blue100);
+  border-radius: 3px;
+  padding: 2px;
 }
 
 
